Prevent text jumps on MediaPlayer render

--- a/src/scss/partials/_mediaPlayer.scss
+++ b/src/scss/partials/_mediaPlayer.scss
@@ -1,3 +1,7 @@
+.media-player__fixed-spacer {
+  height: 52px
+}
+
 .media-player {
   display: flex;
   padding: 1rem;
